fix: polish jump input and symmetric nav placeholders

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,18 @@ a:hover {
   visibility: hidden;
 }
 
+.jump-input {
+  width: 5em;
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+
+.jump-input::-webkit-outer-spin-button,
+.jump-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 pre {
   margin: 0;
   font-family: inherit;
